# discmon

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  app.env.example  docker-compose.yaml
.github/workflows/: audit.yaml  docker_build.yaml  linter.yaml
src/: main.rs  messages.rs
src/di/: cache.rs  database.rs  http_client.rs  mod.rs
src/errors/: cache_error.rs  database_error.rs  handler_error.rs  httpclient_error.rs  mod.rs  pokeapi_error.rs  pokefinder_error.rs
src/handlers/: dev_commands.rs  error.rs  event.rs  message.rs  mod.rs  poke_spawn.rs  pokedex.rs
src/models/: db_model.rs  db_poke.rs  db_trainer.rs  mod.rs
src/serializations/: cache.rs  database.rs  handlers.rs  mod.rs  pokeapi.rs  pokemon.rs
src/services/: database.rs  mod.rs  poke_finder.rs  pokeapi.rs
src/utils/: env_mgr.rs  mod.rs  trainer.rs
