[package]
name = "discmon"
version = "1.0.0"
edition = "2021"

[dependencies]
redis = { version = "0.25.4", default-features = false, features = [
  "json",
  "keep-alive",
] }
reqwest = { version = "0.12.4", default-features = true, features = ["json"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serenity = { version = "0.12.2", default-features = true, features = ["model"] }
surrealdb = { version = "1.5.2", default-features = false }
tokio = { version = "1.38.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
] }
